base.css
body {
    background-color: #050510;
    scroll-behavior: smooth;
}

.flex {
    display: flex;
}
.block {
    display: block;
}
.noanim {
    animation: none;
}

#repos {
    display: flex;
    flex-wrap: wrap;
}

/* fancy glowsticks */
.top-bar {
    height: 4px;
    width: 0;

    animation: bar-blink 2s 1.5s ease-in-out infinite, 
        bar-animate-in 1s .5s ease forwards;
}
.info {
    background-color: #25A;
    box-shadow: 0 0 5px #25A;
}
.ok {
    background-color: #2A2;
    box-shadow: 0 0 5px #2A2;
}
.error {
    background-color: #A22;
    box-shadow: 0 0 5px #A22;
}
@keyframes bar-blink {
    50% {
        filter: brightness(150%);
    }
}
@keyframes bar-animate-in {
    100% {
        width: 100%;
    }
}

/* buttons */
.button-wrapper {
    margin-left: 20px;
    padding: 5px;
}
button {
    padding: 5px;

    font-family: monospace;
    color: white;
    text-shadow: 0 0 1px white;
    font-size: 15px;
    font-weight: 400;

    border: 2px solid;

    transition: background-color .2s ease,
        box-shadow .2s ease;
}
.button-wrapper .red {
    background-color: #A22;
    box-shadow: #A22;
    border-color: #B22;
}
.button-wrapper .red:hover {
    background-color: #C22;
    box-shadow: #C22;
}
.button-wrapper .green {
    background-color: #292;
    box-shadow: #292;
    border-color: #2A2;
}
.button-wrapper .green:hover {
    background-color: #2B2;
    box-shadow: #2B2;
}

